Closed
Bug 719749
Opened 14 years ago
Closed 14 years ago
IonMonkey: Assertion failure: interval->start() < pos && pos < interval->end(), at LinearScan.cpp:1238
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
People
(Reporter: jandem, Assigned: jandem)
References
Details
Attachments
(1 file)
4.50 KB,
patch
|
dvander
:
review+
|
Details | Diff | Splinter Review |
setPropTypeGuard.js and Frame-onStep-07.js fail with this assert.
The problem is that LCallSetPropertyT does not use at-start for its operands. We can fix the instruction to use *AtStart, but I think we should do what you suggested a while ago: make call instruction operands default to at-start.
Attachment #590165 -
Flags: review?(dvander)
![]() |
||
Updated•14 years ago
|
Attachment #590165 -
Flags: review?(dvander) → review+
Assignee | ||
Comment 1•14 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•