Treat call operands like at-start uses (bug 719749, r=dvander)