js/src/ion/LinearScan.cpp
@@ -585,7 +585,12 @@ LinearScanAllocator::buildLivenessInfo()
                         addFixedRange(reg, inputOf(*ins), outputOf(*ins));
                         to = inputOf(*ins);
                     } else {
-                        to = use->usedAtStart() ? inputOf(*ins) : outputOf(*ins);
+                        // Call instruction operands default to at-start, since the
+                        // fixed intervals use all registers.
+                        if (use->usedAtStart() || (ins->isCall() && !alloc.isSnapshotInput()))
+                            to = inputOf(*ins);
+                        else
+                            to = outputOf(*ins);
                     }
 
                     LiveInterval *interval = vregs[use].getInterval(0);
